# fuzzy_actions

./: .gitignore  maze_dataset.py  pair_datasets.py  pyproject.toml  train_decoder.py  train_dqn.py  train_dqn_modular.py  train_hierarchical.py
datasets/oracle_distribution/directional/: labels.npz  metadata.json
datasets/oracle_distribution/uniform/: labels.npz  metadata.json  variants.npz
fuzzy_actions/: __init__.py  dqn.py  replay_buffer.py  utils.py  wrappers.py
hierarchical/: __init__.py  ema.py
hierarchical/losses/: __init__.py  base.py  byol.py  enc_reg_losses.py  forward_loss.py  forward_losses.py  infonce.py  inverse_losses.py  prior_losses.py  reg_losses.py  simsiam.py
hierarchical/models/: __init__.py  decoder.py  encoder.py  forward.py  inverse.py  prediction_head.py  predictor.py  prior.py
layouts/: key_door.json  key_door.txt  simple_nav.json  simple_nav.txt
scripts/: baseline_full.slurm  generate_sweep.py  sweep.slurm
slurm/: run_dqn_modular.sh
